--- a/Yun-1-1-1-Introduction-to-Matplotlib-and-Line-Plots-py-v2.0.ipynb
+++ b/Yun-1-1-1-Introduction-to-Matplotlib-and-Line-Plots-py-v2.0.ipynb
@@ -10,21 +10,6 @@
     }
    },
    "source": [
-    "<a href=\"https://cognitiveclass.ai\"><img src = \"https://ibm.box.com/shared/static/9gegpsmnsoo25ikkbl4qzlvlyjbgxs5x.png\" width = 400> </a>\n",
-    "\n",
-    "<h1 align=center><font size = 5>Introduction to Matplotlib and Line Plots</font></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
     "## Introduction\n",
     "\n",
     "The aim of these labs is to introduce you to data visualization with Python as concrete and as consistent as possible. \n",
@@ -35,49 +20,6 @@
     "**Note**: The majority of the plots and visualizations will be generated using data stored in *pandas* dataframes. Therefore, in this lab, we provide a brief crash course on *pandas*. However, if you are interested in learning more about the *pandas* library, detailed description and explanation of how to use it and how to clean, munge, and process data stored in a *pandas* dataframe are provided in our course <a href='http://cocl.us/DA0101EN_DV0101EN_LAB1_Coursera'>**Data Analysis with Python**</a>, which is also part of this specialization. \n",
     "\n",
     "------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "## Table of Contents\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
-    "\n",
-    "1. [Exploring Datasets with *pandas*](#0)<br>\n",
-    "1.1 [The Dataset: Immigration to Canada from 1980 to 2013](#2)<br>\n",
-    "1.2 [*pandas* Basics](#4) <br>\n",
-    "1.3 [*pandas* Intermediate: Indexing and Selection](#6) <br>\n",
-    "2. [Visualizing Data using Matplotlib](#8) <br>\n",
-    "2.1 [Matplotlib: Standard Python Visualization Library](#10) <br>\n",
-    "3. [Line Plots](#12)\n",
-    "</div>\n",
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "# Exploring Datasets with *pandas* <a id=\"0\"></a>\n",
-    "\n",
-    "*pandas* is an essential data analysis toolkit for Python. From their [website](http://pandas.pydata.org/):\n",
-    ">*pandas* is a Python package providing fast, flexible, and expressive data structures designed to make working with “relational” or “labeled” data both easy and intuitive. It aims to be the fundamental high-level building block for doing practical, **real world** data analysis in Python.\n",
-    "\n",
-    "The course heavily relies on *pandas* for data wrangling, analysis, and visualization. We encourage you to spend some time and  familizare yourself with the *pandas* API Reference: http://pandas.pydata.org/pandas-docs/stable/api.html."
    ]
   },
   {
@@ -4948,6 +4890,7 @@
    "execution_count": 88,
    "metadata": {
     "button": false,
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -6126,51 +6069,6 @@
     "* `pie` for pie plots\n",
     "* `scatter` for scatter plots\n",
     "* `hexbin` for hexbin plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "### Thank you for completing this lab!\n",
-    "\n",
-    "This notebook was originally created by [Jay Rajasekharan](https://www.linkedin.com/in/jayrajasekharan) with contributions from [Ehsan M. Kermani](https://www.linkedin.com/in/ehsanmkermani), and [Slobodan Markovic](https://www.linkedin.com/in/slobodan-markovic).\n",
-    "\n",
-    "This notebook was recently revised by [Alex Aklson](https://www.linkedin.com/in/aklson/). I hope you found this lab session interesting. Feel free to contact me if you have any questions!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "This notebook is part of a course on **Coursera** called *Data Visualization with Python*. If you accessed this notebook outside the course, you can take this course online by clicking [here](http://cocl.us/DV0101EN_Coursera_Week1_LAB1)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "<hr>\n",
-    "\n",
-    "Copyright &copy; 2019 [Cognitive Class](https://cognitiveclass.ai/?utm_source=bducopyrightlink&utm_medium=dswb&utm_campaign=bdu). This notebook and its source code are released under the terms of the [MIT License](https://bigdatauniversity.com/mit-license/)."
    ]
   }
  ],
